--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,24 @@
-
-
-body{
+body {
   background-color: #f7f7f7;
+}
+
+.characters {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 1rem;
+}
+
+@media (max-width: 1024px) {
+  .characters {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.c-header {
+  display: flex;
+  align-items: center;
+}
+
+.c-header .name-role {
+  margin-left: 1rem;
 }
