--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,10 +42,24 @@ body {
 
 .rank-card .index {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -2px;
+  right: -2px;
+  padding: 8px;
+  color: #0d6efd;
+  font-size: 1.2rem;
 }
 
 .rank-card .card-header {
   background-color: #fff;
+}
+
+.add-points-row {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.add-points-row > span {
+  display: inline-block;
+  width: 50px;
 }
