--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@ body {
   background-color: #f7f7f7;
 }
 
+hr {
+  background-color: #999;
+}
+
 .characters {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -40,17 +44,14 @@ body {
   position: relative;
 }
 
-.rank-card .index {
-  position: absolute;
-  top: -2px;
-  right: -2px;
-  padding: 8px;
-  color: #0d6efd;
-  font-size: 1.2rem;
-}
-
 .rank-card .card-header {
   background-color: #fff;
+}
+
+.rank-card-top-style {
+  background-color: #0d6efd;
+  opacity: .9;
+  color: #fff;
 }
 
 .add-points-row {
@@ -63,3 +64,4 @@ body {
   display: inline-block;
   width: 50px;
 }
+
