--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,9 +49,7 @@ hr {
 }
 
 .rank-card-top-style {
-  background-color: #0d6efd;
-  opacity: .9;
-  color: #fff;
+  color: red;
 }
 
 .add-points-row {
