--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,70 @@ hr {
   background-color: #999;
 }
 
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: #fff;
+  opacity: 0.6;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.bg-jump {
+  z-index: 1;
+  position: relative;
+  /*background-image: url("/banner.jpg");*/
+  background-size: cover;
+  background-repeat: no-repeat;
+  /*text-shadow: 1px 1px 1px #ddd;*/
+  /*color: #fff;*/
+}
+
+.bg-jump .btn {
+  text-shadow: none;
+}
+
+.index-feature {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 1rem;
+}
+
+@media (max-width: 1024px) {
+  .index-feature {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 768px) {
+  .index-feature {
+    grid-template-columns: 1fr;
+  }
+}
+
+.index-feature .box {
+  position: relative;
+  z-index: 1;
+  background-color: #fff;
+  padding: 0.75rem;
+  /*color: #fff;*/
+  background-image: url("/tubie.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 5% 99%;
+}
+
+.index-feature .box .overlay {
+  opacity: 0.95;
+  background: #fff;
+}
+
+.index-feature .box h5 {
+  text-align: center;
+}
+
 .characters {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
