--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,6 +74,31 @@ hr {
   text-align: center;
 }
 
+.index-sponsor {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(64px, 1fr));
+  gap: 8px;
+}
+
+.index-sponsor .item {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  background-color: #0d6efd;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  opacity: .9;
+  text-align: center;
+  font-size: 12px;
+}
+
+.index-title {
+  font-size: 1.4rem;
+  margin-bottom: 1.5rem;
+}
+
 .title-1 {
   display: flex;
   justify-content: space-between;
@@ -160,3 +185,4 @@ hr {
   display: inline-block;
   width: 50px;
 }
+
