网站添加扩展仓库支持

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@ body {
   background-color: #faf8fb;
 }
 
-header nav{
+header nav {
   box-shadow: 0 0 8px 0 rgb(86 61 124 / 13%);
 }
 
@@ -89,7 +89,7 @@ hr {
   justify-content: center;
   align-items: center;
   color: #fff;
-  opacity: .9;
+  opacity: 0.9;
   text-align: center;
   font-size: 12px;
 }
@@ -104,6 +104,12 @@ hr {
   justify-content: space-between;
 }
 
+.warehouse-ext-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(90px, 1fr));
+  gap: 4px;
+}
+
 .characters {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -113,7 +119,7 @@ hr {
 .characters .characters-actions {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: .25rem;
+  gap: 0.25rem;
 }
 
 @media (max-width: 1200px) {
@@ -185,4 +191,3 @@ hr {
   display: inline-block;
   width: 50px;
 }
-
