--- a/styles/globals.css
+++ b/styles/globals.css
@@ -94,7 +94,7 @@ hr {
   justify-content: center;
   align-items: center;
   color: #fff;
-  opacity: 0.9;
+  opacity: 0.8;
   text-align: center;
   font-size: 12px;
 }
@@ -193,6 +193,9 @@ hr {
 
 .rank-card.dk .card-header {
   background-image: url("/dk.jpg");
+}
+.rank-card.dw .card-header {
+  background-image: url("/dw.jpg");
 }
 .rank-card.dl .card-header {
   background-image: url("/dl.jpg");
